Just need to do benton, blume?, and guha refs.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,7 +34,7 @@
   OPTyear = {2006},
 }
 
-@article{felleisen02,
+@article{findler02,
   author = {Robert Bruce Findler and Matthias Felleisen},
   title = {Contracts for higher-order functions},
   journal = {SIGPLAN Not.},
@@ -44,33 +44,6 @@
   issn = {0362-1340},
   pages = {48--59},
   doi = {http://doi.acm.org/10.1145/583852.581484},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-}
-
-@inproceedings{felleisen06,
-  author = {Sam Tobin-Hochstadt and Matthias Felleisen},
-  title = {Interlanguage migration: from scripts to programs},
-  booktitle = {OOPSLA '06: Companion to the 21st ACM SIGPLAN conference on Object-oriented programming systems, languages, and applications},
-  year = {2006},
-  isbn = {1-59593-491-X},
-  pages = {964--974},
-  location = {Portland, Oregon, USA},
-  doi = {http://doi.acm.org/10.1145/1176617.1176755},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-}
-
-@article{findler07,
-  author = {Jacob Matthews and Robert Bruce Findler},
-  title = {Operational semantics for multi-language programs},
-  journal = {SIGPLAN Not.},
-  volume = {42},
-  number = {1},
-  year = {2007},
-  issn = {0362-1340},
-  pages = {3--10},
-  doi = {http://doi.acm.org/10.1145/1190215.1190220},
   publisher = {ACM},
   address = {New York, NY, USA},
 }
@@ -109,6 +82,20 @@
   OPTmonth = {June},
 }
 
+@article{matthews07,
+  author = {Jacob Matthews and Robert Bruce Findler},
+  title = {Operational semantics for multi-language programs},
+  journal = {SIGPLAN Not.},
+  volume = {42},
+  number = {1},
+  year = {2007},
+  issn = {0362-1340},
+  pages = {3--10},
+  doi = {http://doi.acm.org/10.1145/1190215.1190220},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
 @manual{microsoft07,
   title = {Microsoft Interface Definition Language},
   OPTorganization = {Microsoft},
@@ -122,4 +109,17 @@
   OPTedition = {3.1},
   OPTmonth = {August},
   OPTyear = {2004},
+}
+
+@inproceedings{tobin-hochstadt06,
+  author = {Sam Tobin-Hochstadt and Matthias Felleisen},
+  title = {Interlanguage migration: from scripts to programs},
+  booktitle = {OOPSLA '06: Companion to the 21st ACM SIGPLAN conference on Object-oriented programming systems, languages, and applications},
+  year = {2006},
+  isbn = {1-59593-491-X},
+  pages = {964--974},
+  location = {Portland, Oregon, USA},
+  doi = {http://doi.acm.org/10.1145/1176617.1176755},
+  publisher = {ACM},
+  address = {New York, NY, USA},
 }
