--- a/chapter-4.tex
+++ b/chapter-4.tex
@@ -8,9 +8,9 @@ The model expressed language interoperation through nesting languages within eac
 
 \section{Importation Type Verification}
 
-The Haskell import expressions, the ML import expression for Scheme, and the Scheme import expression for Haskell verify the expected types match the actual types.  Where expressions from Haskell and ML are imported, their actual types can be checked immediately because Haskell and ML modules export the types of their exported declarations for import verification.  Where Scheme expressions are imported, their actual types can be checked only if they are not functions.  If they are functions, a DrScheme library that implements contracts for higher-order functions is used to delay the verifications of their types.
+The Haskell import expressions, the ML import expression for Scheme, and the Scheme import expression for Haskell verify the expected types match the actual types.  Where expressions from Haskell and ML are imported, their actual types can be checked immediately because Haskell and ML modules export the types of their exported declarations for import verification.  Where Scheme expressions are imported, their actual types can be checked only if they are not functions.  If they are functions, a DrScheme library that implements contracts for higher-order functions \cite{findler02}, is used to delay the verifications of their types.
 
-Contracts are the mechanism that verifies values crossing boundaries match their expected types.  The library also provides a mechanism for assigning blame \ref{TODO: cite contracts} to languages for type errors to indicate which is at fault.  If a Scheme value does not match its expected type, Scheme is at fault.  If an ML value does not match its expected type, ML is at fault.  If Scheme applies an ML function to the wrong value, Scheme is at fault.  ML cannot apply a Scheme function to the wrong type because such a function application expression would be ill-typed.
+Contracts are the mechanism that verifies values crossing boundaries match their expected types.  The library also provides a mechanism for assigning blame to languages for type errors to indicate which is at fault.  If a Scheme value does not match its expected type, Scheme is at fault.  If an ML value does not match its expected type, ML is at fault.  If Scheme applies an ML function to the wrong value, Scheme is at fault.  ML cannot apply a Scheme function to the wrong type because such a function application expression would be ill-typed.
 
 \section{Limiting Scheme}
 
