--- a/thesis.tex
+++ b/thesis.tex
@@ -86,14 +86,13 @@
 \copyrightpage
 \approvalpage
 \begin{abstract}
-[TODO]
+Programming language interoperation is the cooperation of software components written in different languages.  When two components cooperate, they exchange data, a process which must not violate the type systems of either language.  Often languages use incompatible data representations, type systems, or evaluation strategies that complicate interoperation.  My thesis implements a system of interoperation for Haskell, ML, and Scheme and provides a simplified model of the system and a proof of its type soundness.
 \end{abstract}
 \begin{acknowledgements}
 [TODO]
 \end{acknowledgements}
 \addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
-\listoftables
 \listoffigures
 
 \end{frontmatter}
