Finished full rough draft.  Will try to finish final draft by tomorrow.  One day over schedule, I guess not too bad.  I suck.

--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -12,4 +12,4 @@ A third incompatibility is evaluation strategy.  An evaluation strategy determin
 
 Three languages were chosen to investigate solutions to these three incompatibilities.  Haskell and ML use static type systems and preserve parametricity.  ML and Scheme use strict evaluation.  Haskell uses lazy evaluation.  Scheme uses a dynamic type system.  All three languages have higher-order functions.  A system of interoperation for these languages allows the language incompatibilities discussed above to arise.  
 
-The rest of the paper is organized as follows: [TODO]
+The rest of the paper is organized as follows: Chapter 2 defines the model of computation.  Chapter 3 proves the type soundness of the model.  Chapter 4 describes an implementation of the model.  Chapter 5 discusses related work.  Chapter 6 discusses future work.  Chapter 7 discusses the thesis conclusions.
