--- a/thesis.tex
+++ b/thesis.tex
@@ -86,10 +86,12 @@
 \copyrightpage
 \approvalpage
 \begin{abstract}
-Programming language interoperation is the cooperation of software components written in different languages.  When two components cooperate, they exchange data, a process which must not violate the type systems of either language.  Often languages use incompatible data representations, type systems, or evaluation strategies that complicate interoperation.  My thesis implements a system of interoperation for Haskell, ML, and Scheme and provides a simplified model of the system and a proof of its type soundness.
+Programming language interoperation is the cooperation of software components written in different languages.  When two components cooperate, they exchange data across a language boundary that converts it from one form to another.  The boundary resolves conflicts between languages and must not violate the type system of either language.  This paper explores the resolution of conflicting type systems, parametricity support, and evaluation strategies for a system of interoperation for Haskell, ML, and Scheme by defining a model of computation and interoperation, providing a proof of its type soundness, and describing an implementation of it.
 \end{abstract}
 \begin{acknowledgements}
-[TODO]
+\indent\indent I want to thank my father and mother, Jerry and Jo Ann, for their encouragement, advice, and support, without which this would not have been possible.
+
+I want to thank my adviser, John Clements, for helping me along the way.  I very much appreciate the time he set aside for me and his advice.
 \end{acknowledgements}
 \addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
