Finished rewriting abstract and type sys incompat part of intro.

--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -1,10 +1,10 @@
 \chapter{Introduction}
 
-Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between languages.  The boundary converts data from a form understandable by the sending language to a form understandable by the receiving language.  A form of boundary, called an interface bridge, is a two-way map between languages of client and server components.  A set of $n$ interoperable languages requires $n\times(n-1)$ maps to interoperate.
+Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between their languages.  A boundary converts data from the form understandable by the sending language to a form understandable by the receiving language.  A set of $n$ interoperable languages requires $n\times(n-1)$ boundaries.
 
-Language incompatibilities can arise when components exchange data.  One such incompatibility is type systems.  Static type systems check the types of terms at compile time to determine if a type error can occur during run time.  If an error is detected, a program is prevented from being compiled.  In this way static type systems guarantee that no type errors will occur at run time, so there is no need to perform type checks at run time.  Dynamic type systems do not check the types of terms at compile time.  Instead, they insert code that checks types at run time to detect type errors and terminate the computation if one arises.
+Language incompatibilities complicate the process of interoperation.  One such incompatibility is type systems.  Static type systems calculate and validate the types of expressions before run time.  They guarantee that well-typed programs will not encounter type errors during run time.  Run-time type calculations and validations are unnecessary and reduce performance.  Dynamic type systems calculate and validate the types of expressions during run time to detect type errors.  Programs can explicitly calculate the types of expressions with type predicates and report type errors with an error mechanism.  If they detect a type error, they report it and terminate the computation.
 
-When data passes to a component of a statically typed language, its type must be checked at the boundary to ensure it matches its expected type.  Otherwise, a type error caused by the type mismatch would not be detected at run time because statically typed languages do not perform type checks at run time.  If the data comes from a statically typed language, the type of the data is immediately available.  If the data comes from a dynamically typed language, the language must use its type predicates to determine the type of the data.  In the case of a function, type predicates cannot reliably determine its type.  Functions in dynamically typed languages can consume various types of arguments and produce various types of results.  Determining which type of result a function will produce is equivalent to determining its behavior, which is undecidable.  Therefore the types of functions of dynamically typed languages cannot be reliably determined at the boundary.  Instead, functions are wrapped in contracts that check the types of its arguments and results and signal the occurrence of type errors at run time.
+Statically-typed languages that receive data must verify that the actual types of the data match the types they expected.  Mismatched types may cause type errors, which statically-typed languages cannot detect because they do not check internal types during run time.  If a statically-typed language sent the data, the type of the data is immediately available because the language can calculate its type.  If a dynamically-typed language sent the data, it can reliably calculate the types of all data except functions.  Since functions in dynamically-typed languages can produce results of various types and determining function behavior is undecidable \cite{blume04}, function types cannot be reliably calculated.  Therefore dynamically-typed languages cannot reliably calculate the types of functions at boundaries.  Instead, functions are wrapped in contracts \cite{findler02} that check the types of their arguments and results and report type errors during run time.
 
 A second incompatibility is the preservation of parametricity.  Parametricity is a language quality which guarantees that parametrically polymorphic functions behave the same regardless of argument types.  It can ease understanding of function behavior and simplify testing.  Breaking parametricity violates assumptions made by the programmer and other code.  Data passed to functions that may break parametricity are wrapped in such a way to appear inscrutable to type predicates, thereby rendering parametricity-breaking behavior impossible.
 
