--- a/thesis.tex
+++ b/thesis.tex
@@ -70,7 +70,7 @@
 \degreemonth{June}
 \degreeyear{2008}
 \degree{Master of Science}
-\defensemonth{September}
+\defensemonth{August}
 \defenseyear{2008}
 \numberofmembers{3}
 \chair{Dr. John Clements}
@@ -86,7 +86,7 @@
 \copyrightpage
 \approvalpage
 \begin{abstract}
-Programming language interoperation is the cooperation of software components written in different languages.  When two components cooperate, they exchange data across a language boundary that converts it from one form to another.  The boundary resolves conflicts between languages and must not violate the type system of either language.  This paper explores the resolution of conflicting type systems, parametricity support, and evaluation strategies for a system of interoperation for Haskell, ML, and Scheme by defining a model of computation and interoperation, providing a proof of its type soundness, and describing an implementation of it.
+Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between their languages that converts it from one form to another.  The boundary resolves conflicts between languages and must not violate the type system of either language.  This paper explores the resolution of conflicting type systems, parametricity support, and evaluation strategies for a system of interoperation for Haskell, ML, and Scheme by defining a model of computation and interoperation, providing a proof of its type soundness, and describing an implementation of it.
 \end{abstract}
 \begin{acknowledgements}
 \indent\indent I want to thank my father and mother, Jerry and Jo Ann, for their encouragement, advice, and support, without which this would not have been possible.
