Finished ch 1 parametricity rewrite.

--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -6,7 +6,7 @@ Language incompatibilities complicate the process of interoperation.  One such i
 
 Statically-typed languages that receive data must verify that the actual types of the data match the types they expected.  Mismatched types may cause type errors, which statically-typed languages cannot detect because they do not check internal types during run time.  If a statically-typed language sent the data, the type of the data is immediately available because the language can calculate its type.  If a dynamically-typed language sent the data, it can reliably calculate the types of all data except functions.  Since functions in dynamically-typed languages can produce results of various types and determining function behavior is undecidable \cite{blume04}, function types cannot be reliably calculated.  Therefore dynamically-typed languages cannot reliably calculate the types of functions at boundaries.  Instead, functions are wrapped in contracts \cite{findler02} that check the types of their arguments and results and report type errors during run time.
 
-A second incompatibility is the preservation of parametricity.  Parametricity is a language quality which guarantees that parametrically polymorphic functions behave the same regardless of argument types.  It can ease understanding of function behavior and simplify testing.  Breaking parametricity violates assumptions made by the programmer and other code.  Data passed to functions that may break parametricity are wrapped in such a way to appear inscrutable to type predicates, thereby rendering parametricity-breaking behavior impossible.
+A second incompatibility is the preservation of parametricity.  Parametricity guarantees that parametric polymorphic functions in statically-typed languages behave the same regardless of the types and values of their arguments.  It can ease understanding of function behavior and simplify testing.  Breaking parametricity violates assumptions made by programmers.  If functions in dynamically-typed languages are used as parametric polymorphic functions in languages that preserve parametricity, they must be prevented from using type predicates and conditions to determine their behavior by the types and values of their arguments and thereby break parametricity.  The types and values of arguments for such functions are concealed to preserve parametricity.
 
 A third incompatibility is evaluation strategy.  An evaluation strategy determines the order in which expressions are evaluated, most generally when function arguments are evaluated.  Strict evaluation evaluates a function argument before it is substituted for the function parameter.  Lazy evaluation substitutes a function argument for the function parameter without evaluating it.  If the argument is used within the body of the function, it is then evaluated.  Lazy evaluation enables the easy definition of infinite streams using lists, where the list tail is not evaluated until it is used.  Under strict evaluation, every list element is evaluated even if they are not used.  Therefore an infinite list passed from a lazy language to a strict language cannot be converted to an equivalent form because all its elements will be evaluated, which will loop forever because the list is infinite.  Instead, the list is not converted, but passed along wrapped in a container until the strict language needs to access the head or tail, in which case the appropriate item is removed.  If the removed item is itself another infinite list, it too is kept wrapped in a container until its head or tail are needed by the strict language.
 
