--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -1,5 +1,7 @@
 \chapter{Model of Computation}
 
+!!! TODO: explain that nested exps match client/server interactions
+
 Extended lambda calculi represent the languages.  The lambda calculus is a simple model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between calculi is represented by nesting one language within another as an expression embedded within special syntactic forms that indicate a change of language and expected types of expressions for either side of the boundary.
 
 \section{Core Calculi}
