--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -1,18 +1,22 @@
 \chapter{Model of Computation}
 
-!!! TODO: explain that nested exps match client/server interactions
+Embedding server languages within client languages as expressions succinctly expresses the client-server interaction of interoperation.  Embedded server expressions evaluate to values and convert to equivalent client values.  Value conversion represents servers sending data and clients receiving them.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi can represent them.
 
-Extended lambda calculi represent the languages.  The lambda calculus is a simple model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between calculi is represented by nesting one language within another as an expression embedded within special syntactic forms that indicate a change of language and expected types of expressions for either side of the boundary.
+Lambda calculus is a minimal model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between lambda calculi is represented by nesting one language within another as an expression embedded within special syntactic forms that indicate a change of language and expected and actual types of values for both sides of boundaries.
 
 \section{Core Calculi}
 
 \subsection{Haskell}
 
-The Haskell calculus extends the lambda calculus in several ways.  It adds a type system called System F, which provides parametric polymorphism whereby the types of terms can be parameterized and instantiated for specific types.  Types are defined explicitly by annotations for function parameters and for other terms, type abstractions for parameterizing the type of a term, and type applications for instantiating a type abstraction with a type.  The presence of explicit types enables the type of any term to be determined, which can be used to determine whether a type error would occur if the term were evaluated.  If no type errors would occur, the term is said to be well-typed; otherwise, it is said to be ill-typed or to have no type.
+Haskell extends lambda calculus in several ways.  First, it adds natural numbers, addition and subtraction operations for natural numbers, and a conditional expression that uses the natural number zero as true and all other natural numbers as false.  Second, it adds list constructions of head and tail subexpressions, lists, and list operations.  It adds lists, which are either a construction of head and tail expressions or empty and operations that access head and tail expressions.
+
+It adds a static type system called System F, which adds type annotations to certain expressions to enable the calculation of expression types.  Types are defined explicitly by annotations for function parameters and for other terms, .  The presence of explicit types enables the type of any term to be determined, which can be used to determine whether a type error would occur if the term were evaluated.  If no type errors would occur, the term is said to be well-typed; otherwise, it is said to be ill-typed or to have no type.  
+
+which provides parametric polymorphism whereby the types of expressions can be parameterized and instantiated with various types type abstractions for parameterizing the type of a term, and type applications for instantiating a type abstraction with a type
 
 The addition of System F renders the calculus unequivalent to a Turing machine because recursive functions do not have types.  To enable recursion and restore Turing equivalence, a fixed-point operator is added.  The fixed-point operator consumes a function that takes as its parameter its body and produces the body rendered recursive.
 
-In addition, it adds natural numbers, addition and subtraction operations to combine natural numbers, and conditions to choose behavior according to natural numbers.  It adds lists, which are either a construction of head and tail expressions or empty and operations that access head and tail expressions.
+
 
 Furthermore, it imposes a lazy evaluation strategy where function arguments are not evaluated before term substitution.
 
@@ -46,13 +50,13 @@ There is one Scheme type called The Scheme Type, $TST$.  Every well-typed term a
 
 The natural number $\overline{0}$ represents true and all other values of any type represent false.  As such, the condition expression reduces to the true alternative if the guard is $\overline{0}$ and to the false alternative otherwise.  The type predicate expressions reduce to $\overline{0}$ if the predicate is true and the natural number $\overline{1}$ if the predicate is false.  The wrong expression discards the current evaluation context and signals an error with an explanation.  Since type errors can occur at run time, rewrite rules must be added to handle such cases by signaling an an error with an explanation.  The Scheme core operational semantics are in Figure \ref{scos}.
 
-\input{model/hct.tex}
+\input{model/hce.tex}
 \input{model/hctr.tex}
 \input{model/hcos.tex}
-\input{model/mct.tex}
+\input{model/mce.tex}
 \input{model/mctr.tex}
 \input{model/mcos.tex}
-\input{model/sct.tex}
+\input{model/sce.tex}
 \input{model/sctr.tex}
 \input{model/scos.tex}
 
