--- a/model/mctr.tex
+++ b/model/mctr.tex
@@ -16,33 +16,39 @@
 \[
 \frac{}{\vdash_{M}\overline{n}:N}
 \quad
+\frac{\Gamma\vdash_{M}e_{M}^{1}:T\quad\Gamma\vdash_{M}e_{M}^{2}:[T]}{\Gamma\vdash_{M}\mathtt{cons}\;e_{M}^{1}\;e_{M}^{2}:[T]}
+\quad
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{nil}^{T}:[T]}
-\quad
-\frac{x:T\in\Gamma}{\Gamma\vdash_{M}x:T}
-\quad
-\frac{\Gamma\vdash_{M}e_{M}:T\rightarrow T}{\Gamma\vdash_{M}\mathtt{fix}\;e_{M}:T}
 \]
 \[
 \frac{\Gamma\vdash_{M}T_{1}\quad\Gamma,x:T_{1}\vdash_{M}e_{M}:T_{2}}{\Gamma\vdash_{M}\lambda x:T_{1}.e_{M}:T_{1}\rightarrow T_{2}}
 \quad
 \frac{\Gamma,X\vdash_{M}e_{M}:T}{\Gamma\vdash_{M}\Lambda X.e_{M}:\forall X.T}
+\quad
+\frac{x:T\in\Gamma}{\Gamma\vdash_{M}x:T}
 \]
 \[
 \frac{\Gamma\vdash_{M}e_{M}^{1}:T_{1}\rightarrow T_{2}\quad\Gamma\vdash_{M}e_{M}^{2}:T_{1}}{\Gamma\vdash_{M}e_{M}^{1}\;e_{M}^{2}:T_{2}}
 \quad
-\quad
 \frac{\Gamma\vdash_{M}T_{1}\quad\Gamma\vdash_{M}e_{M}:\forall X.T_{2}}{\Gamma\vdash_{M}e_{M}\;\lbrace T_{1}\rbrace:T_{2}[T_{1}/X]}
 \]
 \[
-\frac{\Gamma\vdash_{M}e_{M}^{1}:T\quad\Gamma\vdash_{M}e_{M}^{2}:[T]}{\Gamma\vdash_{M}\mathtt{cons}\;e_{M}^{1}\;e_{M}^{2}:[T]}
+\frac{\Gamma\vdash_{M}e_{M}^{1}:N\quad\Gamma\vdash_{M}e_{M}^{2}:N}{\Gamma\vdash_{M}o\;e_{M}^{1}\;e_{M}^{2}:N}
 \quad
+\frac{\Gamma\vdash_{M}e_{M}^{1}:N\quad\Gamma\vdash_{M}e_{M}^{2}:T\quad\Gamma\vdash_{M}e_{M}^{3}:T}{\Gamma\vdash_{M}\mathtt{if0}\;e_{M}^{1}\;e_{M}^{2}\;e_{M}^{3}:T}
+\]
+\[
 \frac{\Gamma\vdash_{M}e_{M}:[T]}{\Gamma\vdash_{M}\mathtt{hd}\;e_{M}:T}
 \quad
 \frac{\Gamma\vdash_{M}e_{M}:[T]}{\Gamma\vdash_{M}\mathtt{tl}\;e_{M}:[T]}
 \]
 \[
-\frac{\Gamma\vdash_{M}e_{M}^{1}:N\quad\Gamma\vdash_{M}e_{M}^{2}:T\quad\Gamma\vdash_{M}e_{M}^{3}:T}{\Gamma\vdash_{M}\mathtt{if0}\;e_{M}^{1}\;e_{M}^{2}\;e_{M}^{3}:T}
+\frac{\Gamma\vdash_{M}e_{M}^{1}:[T_{1}]\quad\Gamma\vdash_{M}e_{M}^{2}:T_{2}\quad\Gamma\vdash_{M}e_{M}^{3}:T_{2}}{\Gamma\vdash_{M}\mathtt{ifnil}\;e_{M}^{1}\;e_{M}^{2}\;e_{M}^{3}:T_{2}}
 \quad
-\frac{\Gamma\vdash_{M}e_{M}^{1}:N\quad\Gamma\vdash_{M}e_{M}^{2}:N}{\Gamma\vdash_{M}o\;e_{M}^{1}\;e_{M}^{2}:N}
+\frac{\Gamma\vdash_{M}e_{M}:T\rightarrow T}{\Gamma\vdash_{M}\mathtt{fix}\;e_{M}:T}
+\quad
+\]
+\[
+\frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
 \end{figure}
