--- a/model/scos.tex
+++ b/model/scos.tex
@@ -4,27 +4,28 @@
 %\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
-$\mathscr{E}[(\lambda x.e_{S})$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[v_{S}/s]]$ \\
-$\mathscr{E}[v_{S}^{1}$ $v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Not a procedure"$]$ \\
-&& ($v_{S}^{1}\neq\lambda x.e_{S}$) \\
-$\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
-$\mathscr{E}[\mathtt{if0}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{2}]$ $(v_{S}\neq\overline{0})$ \\
+$\mathscr{E}[(\lambda x.e_{S})$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[v_{S}/x]]$ \\
+$\mathscr{E}[v_{S}^{1}$ $v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Not a function"$]$ $(v_{S}^{1}\neq\lambda x.e_{S})$ \\
 $\mathscr{E}[+$ $\overline{n_{1}}$ $\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 $\mathscr{E}[-$ $\overline{n_{1}}$ $\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
-$\mathscr{E}[o$ $v_{S}^{1}$ $v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Not a number"$]$ \\
-&& ($v_{S}^{1}\neq\overline{n}$ or $v_{S}^{2}\neq\overline{n}$) \\
+$\mathscr{E}[o$ $v_{S}^{1}$ $v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Not a number"$]$ $(v_{S}^{1}\neq\overline{n}$ or $v_{S}^{2}\neq\overline{n})$ \\
+$\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
+$\mathscr{E}[\mathtt{if0}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{2}]$ $(v_{S}\neq\overline{0})$ \\
 $\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{1}]$ \\
 $\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{2}]$ \\
 $\mathscr{E}[\mathtt{hd}$ $\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Empty list"$]$ \\
-$\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}]$ \\
+$\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Empty list"$]$ \\
 $\mathscr{E}[f$ $v_{S}^{1}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
-&& ($v_{S}^{1}\neq\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3}$) \\
-$\mathscr{E}[\mathtt{nat?}$ $\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
-$\mathscr{E}[\mathtt{nat?}$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ ($v_{S}\neq\overline{n}$) \\
-$\mathscr{E}[\mathtt{list?}$ $(\mathtt{list}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
-$\mathscr{E}[\mathtt{list?}$ $v_{S}^{1}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ ($v_{S}^{1}\neq\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3}$) \\
-$\mathscr{E}[\mathtt{proc?}$ $(\lambda x.e_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
-$\mathscr{E}[\mathtt{proc?}$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ ($v_{S}\neq\lambda x.e_{S}$) \\
+&& $(v_{S}^{1}\neq\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3}$ and $v_{S}^{1}\neq\mathtt{nil})$ \\
+$\mathscr{E}[\mathtt{ifnil}$ $\mathtt{nil}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
+$\mathscr{E}[\mathtt{ifnil}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{2}]$ $(v_{S}\neq\mathtt{nil})$ \\
+$\mathscr{E}[\mathtt{num?}$ $\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
+$\mathscr{E}[\mathtt{num?}$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ ($v_{S}\neq\overline{n}$) \\
+$\mathscr{E}[\mathtt{list?}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
+$\mathscr{E}[\mathtt{list?}$ $\mathtt{nil}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
+$\mathscr{E}[\mathtt{list?}$ $v_{S}^{1}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ $(v_{S}^{1}\neq\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3}$ and $v_{S}^{1}\neq\mathtt{nil})$ \\
+$\mathscr{E}[\mathtt{fun?}$ $(\lambda x.e_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{0}]$ \\
+$\mathscr{E}[\mathtt{fun?}$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{1}]$ ($v_{S}\neq\lambda x.e_{S}$) \\
 $\mathscr{E}[\mathtt{wrong}$ $\mathrm{string}]_{S}$ & $\rightarrow$ & \textbf{Error}: string
 \end{tabular}
 \end{center}
