--- a/model/hie.tex
+++ b/model/hie.tex
@@ -1,6 +1,6 @@
 \begin{figure}[p]
-\label{hit}
-\caption{Haskell interoperation terms}
+\label{hie}
+\caption{Haskell interoperation expressions}
 %\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
