--- a/model/mie.tex
+++ b/model/mie.tex
@@ -1,6 +1,6 @@
 \begin{figure}[p]
-\label{mit}
-\caption{ML interoperation terms}
+\label{mie}
+\caption{ML interoperation expressions}
 %\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
