--- a/model/sie.tex
+++ b/model/sie.tex
@@ -1,6 +1,6 @@
 \begin{figure}[p]
-\label{sit}
-\caption{Scheme interoperation terms}
+\label{sie}
+\caption{Scheme interoperation expressions}
 %\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
